--- a/index.html
+++ b/index.html
@@ -1,9 +1,200 @@
-<html>
-  <head>
-    <title>latihan</title>
-  </head>
-<body>
-<h1>hello dunia</h1>
-</body>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>aljaper</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    body {
+    background: url('https://giffiles.alphacoders.com/120/120035.gif') no-repeat center center fixed;
+    background-size: cover;
+    color: red;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+header {
+    background-color: rgb(0, 0, 0);
+    color: green;
+    padding: 20px;
+    text-align: center;
+}
+
+header img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+}
+
+header h1 {
+    font-size: 2em;
+    margin: 10px 0;
+}
+
+header p {
+    font-size: 1em;
+    margin: 10px 0;
+}
+
+nav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+nav li {
+    list-style-type: none;
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
+}
+
+article {
+    padding: 20px;
+    margin: 20px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+}
+
+article h1 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+}
+
+button a {
+    text-decoration: none;
+    color: black;
+    display: block;
+    padding: 10px 20px;
+    background-color: #ddd;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button a:hover {
+    background-color: #bbb;
+}
+
+form {
+    margin: 20px 0;
+    text-align: center;
+}
+
+form input[type="text"] {
+    padding: 10px;
+    margin: 10px 0;
+    width: 200px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+form input[type="button"] {
+    padding: 10px 20px;
+    margin: 10px 0;
+    background-color: #ddd;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form input[type="button"]:hover {
+    background-color: #bbb;
+}
+
+cite {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    font-style: italic;
+}
+
+fieldset{
+  width:160px;
+  height: auto;
+}
+
+  </style>
+</head>
+</body>
+<header style="background-color: rgb(0, 0, 0); color: green;">
+  <img id="img_header" src="melanesia.jpg" alt="sorry this image broken" style="width: 250px; height: 250px; border-radius: 100%;" >
+  <cite>
+    <h1>selamat datang di halaman pribadi saya</h1>
+  
+    <p>tentang web: web site ini dibuat hanya untuk bersenang-senang</p>
+  </cite>
+</header>
+<nav id="nav">
+  <li id="home" style="background-color: #cf0505;"><a href="file:///home/termoct/Desktop/index.html">home</a></li>
+  <li id="tentang"><a href="file:///home/termoct/Desktop/about.html">tentang</a></li>
+  <li id="login"><a href="///home/termoct/Desktop/login.html">login</a></li>
+  <li id="berita"><a href="///home/termoct/Desktop/berita.html">berita</a></li>
+  <li id="kontak"><a href="///home/termoct/Desktop/kontak.html">kontak</a></li>
+
+</nav>
+<article>
+  <p id="article">
+    <h1>awal kedatangan kolonial belanda ke melanesia</h1>
+    <pre>
+    pada awal 1800 kapal-kapal kolonial belanda mulai menjelajah pulau papua 
+    dan mengakui papua sebagai bagian dari kerajaan belanda pada tahun 1828 
+  </pre>
+  </p>
+</article>
+<body background="https://giffiles.alphacoders.com/120/120035.gif" style="color: red; font-family: 'Courier New', Courier, monospace;">
+
+<button><a href="https://www.instagram.com/mebri_roy/" target="_blank">roy</a></button>
+<button><a href="https://www.instagram.com/___.yudd1/" target="_blank">yudi</a></button>
+<button><a href="https://www.instagram.com/the_melanesia/" target="_blank">yusuf</a></button>
+<button><a href="https://www.instagram.com/risyad_yewi/" target="_blank">paris</a></button>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+ <fieldset>
+<pre>
+  <div id='fname'></div>
+</pre>
+</fieldset>
+  <input type="text" id='name' name="username" placeholder="your name">
+  <input type=button name="button" onclick="uname()" value="kirim">
+
+<cite style="text-align: center;">
+  yang lain masih proses
+</cite>
+<!--  
+<button><a href="https://www.instagram.com/mebri_roy/" target="_blank">roy</a></button>
+<button><a href="https://www.instagram.com/mebri_roy/" target="_blank">roy</a></button>
+<button><a href="https://www.instagram.com/mebri_roy/" target="_blank">roy</a></button>
+<button><a href="https://www.instagram.com/mebri_roy/" target="_blank">roy</a></button>
+<button><a href="https://www.instagram.com/mebri_roy/" target="_blank">roy</a></button>
+  -->
+<script>
+  function uname(){
+   var username = document.getElementById('name').value;
+   document.getElementById('fname').innerHTML = "hello " + username + " wellcome";
+}
+  
+</script>
+
+
+</body>
 </html>
